# snippets

.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  nginx-oauth2.yml  oauth2.yml  quarkus.yml  retrofit.yml  spring-boot.yml
c/pipe-worker/: Makefile  server.c  worker.c
certificates/: .gitignore  README.md  compose.yml
cgo/: .gitignore  Makefile  README.md  go.mod  main.c  main.go  main_test.go
container/java-awt/: .gitignore  Containerfile.alpine+xorg-server  Containerfile.alpine+xvfb  Containerfile.ubuntu+xorg-server  Containerfile.ubuntu+xvfb  README.md  Verify.java
container/nginx/: compose.yml
container/nginx-oauth2/: compose.yml
container/nginx-oauth2/e2e/: package-lock.json  package.json  vitest.config.js
container/sd/: README.md  compose.yml  req.json
container/sd/srv/: go.mod  main.go
graph/planner/: direct_acyclic_graph.py  direct_acyclic_graph_test.py  planner.py  planner_test.py
ibmmq/: README.md  docker-compose.yml  pom.xml
java/jdbc/: compose.yml  pom.xml
k8s/k8s-client/: Containerfile  Makefile  README.md  deployment.yaml  go.mod  go.sum  main.go  watch.go
kafka/: compose.yml
kafka/jvm/: pom.xml
kafka/jvm/producer/: pom.xml
kafka/python/: producer.py
nginx/njs/post/: compose.yml
nginx/oauth2/: .gitignore  README.md  compose.yml
nginx/oauth2/docker-entrypoint.d/: 00-nginx.conf.sh
nginx/oauth2/e2e/: package-lock.json  package.json
oauth2/: compose.yml
oauth2/e2e/: eslint.config.js  package-lock.json  package.json
openssl/: README.md  main-b64.c  main.c  pom.xml
opentelemetry/retrofit/: README.md  compose.yml
opentelemetry/retrofit/cases/: CMakeLists.txt  client-v1.c  client-v2.c  client-v3.c  client-v4.c  client-v5.c  client.c  go.mod  run.sh  server.go  threads.c
opentelemetry/retrofit/client/: .gitignore  CMakeLists.txt  main.c
opentelemetry/retrofit/middleware/: CMakeLists.txt  Containerfile  README.md  client.c  dummy.c  middleware.c  middleware.h  opentelemetry.c  opentelemetry.h  producer.c  server.c
otel/python/: README.md  compose.yml  requirements.txt  server.py
quarkus/: README.md  pom.xml
quarkus/all-in-one/: .dockerignore  README.md  compose.yml  pom.xml
quarkus/clustered/: Containerfile  README.md  compose.yml  pom.xml
quarkus/crud/: README.md  compose.yml  pom.xml
quarkus/kstreams/: README.md  compose.yaml  pom.xml
quarkus/listen/: Containerfile  README.md  compose.yml  pom.xml
spring-boot/: README.md  diktat-analysis.yml  pom.xml
udp/: Makefile  client.c  server.c
vue/quasar/: .editorconfig  eslint.config.js  package-lock.json  package.json  vite.config.ts
web/svg/: index.html  package-lock.json  package.json
(+163 files in other folders)
